HW1: Problem 2: Sketch out basic API
Signed-off-by: Kristiyan Stoimenov <kristoimenov@gmail.com>

--- a/assignments/hw1/lcodes/CMakeLists.txt
+++ b/assignments/hw1/lcodes/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.26)
 project(lcodes)
 
-set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD 20)
 
-add_library(lcodes lcodes.cpp channel.h channel.cpp)
+add_library(lcodes lcodes.h lcodes.cpp)
 target_include_directories(lcodes PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(lcodes-demo main.cpp channel.cpp)
-target_link_libraries(lcodes-demo PRIVATE lcodes)
+add_executable(lcodes-demo main.cpp)
+target_link_libraries(lcodes-demo PRIVATE lcodes gsl gslcblas)
