HW1: Rework API and design of lib
Signed-off-by: Kristiyan Stoimenov <kristoimenov@gmail.com>

--- a/assignments/hw1/lcodes/CMakeLists.txt
+++ b/assignments/hw1/lcodes/CMakeLists.txt
@@ -11,9 +11,12 @@ option(LCODES_BUILD_DEMO "Whether the additional demonstration program should be
 
 add_library(lcodes lcodes.h lcodes.cpp)
 target_include_directories(lcodes PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(lcodes PRIVATE CONAN_PKG::gsl)
+target_link_libraries(lcodes PRIVATE
+		CONAN_PKG::gsl
+		CONAN_PKG::ms-gsl
+		CONAN_PKG::fmt)
 
-if("${LCODES_BUILD_DEMO}" STREQUAL "yes")
-	add_executable(lcodes-demo demo.cpp)
+#if("${LCODES_BUILD_DEMO}" STREQUAL "yes")
+	add_executable(lcodes-demo main.cpp channel.cpp channel.h)
 	target_link_libraries(lcodes-demo PRIVATE lcodes)
-endif()
+#endif()
